# Cameralease

./: .gitignore  README.md
server/: Cargo.toml  docs.md
server/.sqlx/: query-0613a071f837224dd4c5dd60e58dca4394fad891f2e24c5c19d59e8622be0c86.json  query-08f203fcbe595f5c4b7dabf85095b86c51939da9609da03478434d94b42961b4.json  query-48a6f219f204c4c4ec6a3853cba6064144c0fc6cf16749f3855ce7d740928e01.json  query-73d9b5905cfcb2c751c7c5fc94be2774d79bafb0a2fe99707a353e2a2c11b43e.json  query-84300c36ec21f72d35cc08278f032b0f3bb50a37a0d6c826ef1b70c419f40837.json  query-848e9e6d81fc27c74938745a9b207c622e427d3640af3d63ee6d522b2c858b85.json  query-9b9bb3b01fcbc1442ec5fd349f7123215da5dc630a58a87ef21547c74dc65ffa.json  query-aad16c07f7ba3c9da7980c6d40cb7abb13c29fc33f4a97ca2978fb13aa12e6a5.json  query-b50e355b747b1994943973d0c77eb45a0b1d6460d5dcc708c88095a34c64432d.json  query-de1578646619039b01d73f8cd0471e9c7e16cc8bbbe32063247a74ff5ec54cdf.json  query-f30ca23415cfb33deaf494d88346994400913ea8231b340efd3f06acc4e89737.json  query-fe42b55a41b14758256dc5c2beaccb34d7b2fff664025e4d8202ac505d2209b5.json
server/db/: db.sqlite  state.json
server/db/migrations/: 20210331024424_create-posts-table.sql  db.sqlite
server/src/: main.rs
web/: README.md  index.html  main.css  package.json
web/public/: index.html
web/src/: App.tsx  CameraCard.scss  CameraCard.tsx  CameraList.tsx  EquipmentCard.scss  EquipmentCard.tsx  EquipmentList.tsx  Header.scss  Header.tsx  History.scss  History.tsx  LoadingScreen.scss  LoadingScreen.tsx  MainPage.tsx  MessageBox.scss  MessageBox.tsx  TimeLine.scss  main.ts  (+5 more)
