[package]
name = "databases"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
rocket = {  features = ["json"] }
futures = "0.3.30"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
features = ["sqlx_sqlite"]
