[package]
name = "cameralease"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
rocket = {  features = ["json"] }
futures = "0.3.30"
serde_json = "1.0.111"
regex = "1.10.3"
once_cell = "1.19.0"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
features = ["sqlx_sqlite"]
